other-vpol/block-stale-images/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: block-staleimg-ns
