other-vpol/block-stale-images/.chainsaw-test/podcontrollers-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
  namespace: block-staleimg-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:latest
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.28
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: block-staleimg-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.28
          - name: busybox02
            image: ghcr.io/kyverno/test-busybox:latest
          restartPolicy: OnFailure
