other-vpol/block-stale-images/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: block-staleimg-ns
spec:
  containers:
  - name: busybox 
    image: ghcr.io/kyverno/test-busybox:latest
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.28
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: block-staleimg-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.28
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: block-staleimg-ns
spec:
  containers:
  - name: busybox 
    image: ghcr.io/kyverno/test-busybox:1.28
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:latest
