other-vpol/block-stale-images/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-stale-images
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: ../block-stale-images.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: block-stale-images
          spec:
            validationActions:
              - Deny
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Images built more than 6 months ago are prohibited')): true
        file: pods-bad.yaml
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Images built more than 6 months ago are prohibited')): true
        file: podcontrollers-bad.yaml
  - name: step-99
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n block-staleimg-ns
